# forecast-engine

./: .env.example  .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
scripts/: seed_programs.py
src/forecast_engine/: app.py  config.py  templating.py
src/forecast_engine/auth/: ldap.py  middleware.py
src/forecast_engine/models/: __init__.py  actuals.py  base.py  demand.py  forecast.py  ml.py  program.py
src/forecast_engine/routes/: auth.py  demand.py  forecasts.py  imports.py  models.py  pages.py  programs.py  staffing.py
src/forecast_engine/scripts/: seed_model.py
src/forecast_engine/services/: features.py  forecast.py  importer.py  mcp_oracle.py  mcp_unanet.py  shap_engine.py  training.py
src/forecast_engine/templates/: base.html  dashboard.html  demand_signal.html  import.html  leadership.html  login.html  models.html  program_detail.html  staffing.html
src/forecast_engine/templates/partials/: forecast_card.html
static/js/: charts.js
static/templates/: import_531335_C48178.csv  import_all_programs.csv  import_template.csv
