[project]
name = "forecast-engine"
version = "0.1.0"
description = "Support Labor Forecasting Tool — replaces ratio method with headcount + ML"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "scikit-learn>=1.5",
    "shap>=0.45",
    "pandas>=2.2",
    "numpy>=2.0",
    "openpyxl>=3.1",
    "joblib>=1.4",
    "ldap3>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.5",
]
prod = [
    "asyncpg>=0.29",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
